Added unit tests and refactored codeconverter and redemptionId
Co-Authored-By: Trenton Hicks <trentonmhicks@gmail.com>

--- a/src/web-app/infrastructure/src/infrastructure.csproj
+++ b/src/web-app/infrastructure/src/infrastructure.csproj
@@ -6,6 +6,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.7" />
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
-    <ProjectReference Include="..\domain\domain.csproj" />
+    <ProjectReference Include="..\..\domain\src\domain.csproj" />
   </ItemGroup>
 </Project>
