--- a/src/web-app/server/CodeJar.WebApp.csproj
+++ b/src/web-app/server/CodeJar.WebApp.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.LiveShare" Version="*" />
-    <ProjectReference Include="..\domain\domain.csproj" />
-    <ProjectReference Include="..\infrastructure\infrastructure.csproj" />
+    <ProjectReference Include="..\domain\src\domain.csproj" />
+    <ProjectReference Include="..\infrastructure\src\infrastructure.csproj" />
   </ItemGroup>
 </Project>
