--- a/src/code-jar-client/code-jar-client.csproj
+++ b/src/code-jar-client/code-jar-client.csproj
@@ -2,17 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <IsPackable>true</IsPackable>
+    <RootNamespace>code_jar_client</RootNamespace>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.1" />
-    <PackageReference Include="Microsoft.VisualStudio.LiveShare" Version="*" />
+
+   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
     <PackageReference Include="system.net.http" Version="4.3.4" />
     <PackageReference Include="System.Text.Json" Version="4.7.0" />
   </ItemGroup>
-
 </Project>
